--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #front {
-   border:5px solid red; 
+   border:1px dashed red; 
    width:400px;
    height:200px;
    margin:auto;
@@ -9,12 +9,20 @@ h1{
     text-align:center;
 }
 #img {
-    border:2px solid red;
+    
     width: 50px;
     height: 50px;
     /*position:fixed;*/
     margin-left:10px;
+    margin-top: 10px;
     display:inline-block;
     bottom:140px;
     /*background-image:url("");*/
+}
+#header {
+    width:400px;
+    height:50px;
+}
+div {
+    border:1px dashed red; 
 }
