--- a/style.css
+++ b/style.css
@@ -13,16 +13,64 @@ h1{
     width: 50px;
     height: 50px;
     /*position:fixed;*/
-    margin-left:10px;
-    margin-top: 10px;
-    display:inline-block;
+    margin-left:3px;
+    /*margin-top: px;*/
+    /*display:inline-block;*/
     bottom:140px;
+    float:left;
+    
     /*background-image:url("");*/
 }
 #header {
     width:400px;
     height:50px;
+    display:block;
 }
-div {
-    border:1px dashed red; 
+#floatRight {
+    width:200px;
+    height:148px;
+    float:right;
+    
+    
+}
+#middle {
+    width:140px;
+    height:74px;
+    float:right;
+   
+}
+#bottom {
+    width:140px;
+    height:74px;
+    float:right;
+   
+}
+/*div {*/
+/*    border:1px dashed red; */
+/*}*/
+p {
+    word-wrap:break-word;
+}
+.address {
+    text-align: center;
+}
+#indicator {
+    text-align:center;
+    font-size:75%;
+}
+#indicator0 {
+    text-align:center;
+    font-size:75%;
+}
+#indicator1 {
+    text-align:center;
+    font-size:75%;
+}
+.number {
+    text-align: center;
+    word-wrap:break-word;
+}
+.name{
+    text-align: center;
+    word-wrap:break-word;
 }
